# ProjectShift

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.py  main.cpp
assets/shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  line.frag  line.vert  line.vert.spv  plane.frag  plane.frag.spv  plane.vert  plane.vert.spv  shadow.vert  shadow.vert.spv
include/editor/: camera.hpp  global.hpp  scene.hpp  scene_manager.hpp  server.hpp  transition.hpp
include/graphics/: color.hpp  descriptor.hpp  framebuffer.hpp  rendering_device.hpp  rendering_pass.hpp
include/graphics/images/: image_server.hpp
include/graphics/meshes/: mesh.hpp  mesh_server.hpp
include/graphics/vulkan/: base.hpp  buffer.hpp  command.hpp  command_buffer.hpp  depth.hpp  descriptor_set.hpp  device.hpp  framebuffer.hpp  image.hpp  image_view.hpp  instance.hpp  physical_device.hpp  pipeline.hpp  queue.hpp  render_pass.hpp  renderer.hpp  shader.hpp  sync.hpp  vertex_input.hpp
include/graphics/vulkan/khr/: surface.hpp  swapchain.hpp
include/math/: angle.hpp  basis.hpp  ext.hpp  quaternion.hpp
include/math/matrix/: ext.hpp  graphics.hpp  mat3.hpp  mat4.hpp  transform.hpp
include/math/vector/: algo.hpp  ext.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/memory/: g.hpp  gpu.hpp  map.hpp  misc.hpp  rid.hpp  slice.hpp  table.hpp  vector.hpp
include/scenes/: default_scene.hpp
include/server/: buffer.hpp  command_pool.hpp  descriptor.hpp  framebuffer.hpp  gpu_memory.hpp  image.hpp  mesh.hpp  pipeline.hpp  queue.hpp  render_pass.hpp  rid.hpp  shader.hpp
include/vulkan/: command_buffer.hpp  render.hpp  sync.hpp
src/editor/: global.cpp  server.cpp
src/graphics/: descriptor.cpp  framebuffer.cpp  rendering_device.cpp  rendering_pass.cpp
src/graphics/images/: image_server.cpp
src/graphics/meshes/: mesh_server.cpp
src/graphics/vulkan/: base.cpp  buffer.cpp  command.cpp  command_buffer.cpp  depth.cpp  descriptor_set.cpp  device.cpp  framebuffer.cpp  image.cpp  image_view.cpp  instance.cpp  physical_device.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  renderer.cpp  shader.cpp  sync.cpp
src/graphics/vulkan/khr/: surface.cpp  swapchain.cpp
src/memory/: gpu.cpp  misc.cpp  rid.cpp  slice.cpp  table.cpp
src/server/: buffer.cpp  command_pool.cpp  descriptor.cpp  framebuffer.cpp  gpu_memory.cpp  image.cpp  mesh.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  rid.cpp  shader.cpp
src/vulkan/: command_buffer.cpp  render.cpp  sync.cpp
